<resources>
    <string name="app_name">打印工具</string>
    <string name="btn_add_files">添加文件</string>
    <string name="btn_clear">清空</string>
    <string name="btn_print_wifi">无线打印</string>
    <string name="btn_print_otg">USB/OTG 打印</string>
    <string name="hint_empty">还没选文件，点「添加文件」挑个 PDF、图片、文本或 Word</string>
    <string name="format_pdf">PDF</string>
    <string name="format_image">图片</string>
    <string name="format_text">文本</string>
    <string name="format_docx">Word</string>
    <string name="format_unsupported">不支持</string>
    <string name="msg_pick_failed">文件没打开成功</string>
    <string name="msg_unsupported">这格式不支持，换个 PDF、图片、TXT 或 .docx 试试</string>
    <string name="options_title">打印选项</string>
    <string name="option_duplex">双面打印</string>
    <string name="option_copies">份数</string>
    <string name="option_paper">纸张</string>
    <string name="option_color">颜色</string>
    <string name="usb_unsupported">当前设备不支持 USB OTG Host 功能</string>
    <string name="usb_none">未检测到 USB 打印机，插好 OTG 线再看</string>
    <string name="usb_connected_one">已连接：%1$s</string>
    <string name="usb_connected_many">已连接 %1$d 台 USB 打印机，点击 USB/OTG 打印可选</string>
    <string name="usb_choose_printer">选择要打印的打印机</string>
    <string-array name="paper_sizes">
        <item>A4</item>
        <item>Letter</item>
        <item>Legal</item>
    </string-array>
    <string-array name="color_modes">
        <item>彩色</item>
        <item>黑白</item>
    </string-array>
</resources>